# QGIS

src/plugins/: CMakeLists.txt
src/plugins/gis_nebenbestimmungen/: CMakeLists.txt  README  gisnebenbestimmungen.cpp  gisnebenbestimmungen.h  gisnebenbestimmungen.qrc  gisnebenbestimmungengui.cpp  gisnebenbestimmungengui.h  gisnebenbestimmungenguibase.ui
